package sample;

public interface TowerInterface {

    void setRotation();
    void update();
    void upgrade();
    void fire();
}
