package sample;

public interface TowerInterfaceWithClosest extends TowerInterface {
    void findClosestEnemy();
    boolean isInRange();//car dans magic tower on a isInRange(PNJ pnj)
}
